--- a/Stop Watch/css/style.css
+++ b/Stop Watch/css/style.css
@@ -38,6 +38,7 @@ body{
     border-radius:5px ;
     margin: 5px;
     font-size: 30px;
+    cursor: pointer;
 }
 .btn:active{
     background-color: #333;
